--- a/chip8-emu/chip8-emu.vcxproj
+++ b/chip8-emu/chip8-emu.vcxproj
@@ -126,10 +126,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Chip8.cpp" />
+    <ClCompile Include="Display.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\..\1-chip8-logo.ch8" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Chip8.hpp" />
+    <ClInclude Include="Display.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
